--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -14,6 +14,10 @@ body {
     display: grid;
     grid-template-columns: repeat(2,1fr);
     padding: 10px;
+    column-gap: 15px;
+}
+.movies a{
+    text-decoration: none;
 }
 .loader{
     position: absolute;
@@ -21,4 +25,7 @@ body {
     left: 50%;
     transform: translate(-50%,-50%);
     font-size: 2rem;
+    color: #0008fc;
+    padding: 10px 20px;
+    border-radius: 5px;
 }
